Closed Bug 1019999 Opened 10 years ago Closed 10 years ago

Possible to get stuck in overscrolled state

Categories

(Core :: Panning and Zooming, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: botond, Assigned: botond)

References

Details

Attachments

(1 file, 2 obsolete files)

I don't have any better STR than "play around with overscrolling a lot", but we have observed pages get stuck in an overscrolled state.

You then can't get out of it because we ignore touch events when in an overscrolled state.

Kats said he suspects the problem might be that the OverscrollSnapBackAnimation is being cancelled during a scroll offset update [1].

[1] http://dxr.mozilla.org/mozilla-central/source/gfx/layers/apz/src/AsyncPanZoomController.cpp?from=AsyncPanZoomController.cpp#2106
Assignee: nobody → botond
Attached patch bug1019999.patch (obsolete) — Splinter Review
Speculative fix assuming the problem is what we think it is.
Attachment #8435938 - Flags: review?(bugmail.mozilla)
Comment on attachment 8435938 [details] [diff] [review]
bug1019999.patch

Review of attachment 8435938 [details] [diff] [review]:
-----------------------------------------------------------------

::: gfx/layers/apz/src/AsyncPanZoomController.cpp
@@ +1591,1 @@
>    mAnimation = nullptr;

I think we might also want to do a RequestContentRepaint here, just to be safe.
Attachment #8435938 - Flags: review?(bugmail.mozilla) → review+
Attached patch bug1019999.patch (obsolete) — Splinter Review
Updated to add RequestContentRepaint. Carrying r+.
Attachment #8435938 - Attachment is obsolete: true
Attachment #8435987 - Flags: review+
Attached patch bug1019999.patchSplinter Review
The patch had a bug where it didn't check if there actually was an animation before calling Cancel(). Updated to fix this, carrying r+.
Attachment #8435987 - Attachment is obsolete: true
Attachment #8436407 - Flags: review+
New Try push for this bug and bug 1014280 combined: https://tbpl.mozilla.org/?tree=Try&rev=6a8d59b67394
https://hg.mozilla.org/mozilla-central/rev/fd43a33d7bae
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: