Bug 1019999 - Clear overscroll if snap-back animation is cancelled. r=kats